DCSA-3 DCSA smaller ui adjustments

--- a/ui/src/app/view/header/header.component.html
+++ b/ui/src/app/view/header/header.component.html
@@ -2,7 +2,8 @@
   <div class="p-col-1">
     <img class="header__logo" src="assets/DCSA_logo_color_on_dark_background.png">
   </div>
-  <div class="p-col-7 header__menuEntry" >
+  <div class="p-col-1"></div>
+  <div class="p-col-6 header__menuEntry" >
     <button pButton (click)="showInstructions()" label="Instructions" class="p-button-text p-button-secondary" icon="pi pi-question" type="button"></button>
     <button pButton (click)="showDownloladRequest()" type="button" label="Download Timestamps" class="p-button-text p-button-secondary" icon="pi pi-download"></button>
   </div>
