--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -1,4 +1,4 @@
-<p-table [value]="($timestamps | async)">
+<p-table [value]="($timestamps | async)" styleClass="p-datatable-sm">
   <ng-template pTemplate="body" let-timestamp>
     <tr>
       <td style="width: 2%"></td>
