DCSA-3 DCSA adjusted instructions pop up

--- a/ui/src/app/view/instructions/instructions.component.html
+++ b/ui/src/app/view/instructions/instructions.component.html
@@ -2,28 +2,97 @@
 
   <p-card header="How to use" subheader="Card Subheader" [style]="{width: '100%'}" styleClass="p-card-shadow">
     <ng-template pTemplate="header">
-      <img style="object-fit: cover; object-position: 0 80%; height: 220px" alt="Card" src="assets/JIT-Port-Call-Image.jpg">
+      <img style="object-fit: cover; object-position: 0 80%; height: 220px" alt="Card"
+           src="assets/JIT-Port-Call-Image.jpg">
     </ng-template>
     <p>
-      Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-    </p><p>
-      Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-  </p><p>
-      Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-  </p><p>
-      Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
-  </p><p>
-      Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.
-  </p><p>
-      At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, At accusam aliquyam diam diam dolore dolores duo eirmod eos erat, et nonumy sed tempor et et invidunt justo labore Stet clita ea et gubergren, kasd magna no rebum. sanctus sea sed takimata ut vero voluptua. est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.
-  </p><p>
-      Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus.
-  </p><p>
-      Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-  </p><p>
-      Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-  </p><p>
-      Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+      Below are the explanations of the timestamps. Please fill these timestamps as detailed as possible and add every
+      change that is communicated by the Terminal Operator, Port, or you as Carrier. This will give us a detailed view
+      of how often the estimated times of arrival, cargo operations and departure change. Note that for cargo
+      operations, not every change is absolutely necessary, just a good overview of the ETC 12 hours, 6 hours and 3
+      hours before the end. Thank you very much for your time and effort!
     </p>
+
+    <div class="p-grid">
+      <div class="p-col-fixed" style="width:140px"><b>ETA BERTH</b></div>
+      <div class="p-col">Estimated time of arrival at berth of vessel</div>
+    </div>
+    <div class="p-grid">
+      <div class="p-col-fixed" style="width:140px"><b>RTA BERTH</b></div>
+      <div class="p-col">Time of arrival at berth as requested by the terminal operator</div>
+    </div>
+    <div class="p-grid">
+      <div class="p-col-fixed" style="width:140px"><b>PTA BERTH</b></div>
+      <div class="p-col">Planned time of arrival at berth. When a vessel operator (or his agent) confirmed the requested
+        time of arrival berth to the terminal operator.
+      </div>
+    </div>
+    <div class="p-grid">
+      <div class="p-col-fixed" style="width:140px"><b>ETA PBP</b></div>
+      <div class="p-col">Estimated time of arrival at pilot boarding place or zone. This is communicated by the vessel /
+        agent to the port authority.
+      </div>
+    </div>
+    <div class="p-grid">
+      <div class="p-col-fixed" style="width:140px"><b>RTA PBP</b></div>
+      <div class="p-col">Time of arrival at pilot boarding place as requested by the port authority or pilot
+      </div>
+    </div>
+    <div class="p-grid">
+      <div class="p-col-fixed" style="width:140px"><b>PTA PBP</b></div>
+      <div class="p-col">Planned time of arrival at pilot boarding place. When a vessel operator (or his agent)
+        confirmed the requested time of arrival PBP to the pilot/port authority.
+      </div>
+    </div>
+    <div class="p-grid">
+      <div class="p-col-fixed" style="width:140px"><b>ATA PBP</b></div>
+      <div class="p-col">The actual time of arrival of the vessel at Berth
+      </div>
+    </div>
+    <div class="p-grid">
+      <div class="p-col-fixed" style="width:140px"><b>ATA BERTH</b></div>
+      <div class="p-col">The actual time of arrival of the vessel at pilot boarding place
+      </div>
+    </div>
+    <div class="p-grid">
+      <div class="p-col-fixed" style="width:140px"><b>ATS CARGO OPS</b></div>
+      <div class="p-col">The actual time at which the cargo operations has started (first commercial lift)
+      </div>
+    </div>
+    <div class="p-grid">
+      <div class="p-col-fixed" style="width:140px"><b>ETC CARGO OPS</b></div>
+      <div class="p-col">Estimated time of completion cargo operations. The estimate is usually based on the estimated productivity to perform the total number of moves
+      </div>
+    </div>
+    <div class="p-grid">
+      <div class="p-col-fixed" style="width:140px"><b>RTC CARGO OPS</b></div>
+      <div class="p-col">The requested time at which the vessel operator or agent would like the cargo operations to finish (last commercial lift) e.g. The vessel operator might request an earlier departure in case of cut & run      </div>
+    </div>
+    <div class="p-grid">
+      <div class="p-col-fixed" style="width:140px"><b>PTC CARGO OPS</b></div>
+      <div class="p-col">The agreed upon planned time of completion of cargo operations</div>
+    </div>
+    <div class="p-grid">
+      <div class="p-col-fixed" style="width:140px"><b>ATC CARGO OPS</b></div>
+      <div class="p-col">The actual time of completion of cargo operations (last commercial lift)</div>
+    </div>
+    <div class="p-grid">
+      <div class="p-col-fixed" style="width:140px"><b>ETD BERTH</b></div>
+      <div class="p-col">The estimated time of departure from the berth</div>
+    </div>
+    <div class="p-grid">
+      <div class="p-col-fixed" style="width:140px"><b>RTD BERTH</b></div>
+      <div class="p-col">The requested time of departure from berth, as requested by the port authority </div>
+    </div>
+    <div class="p-grid">
+      <div class="p-col-fixed" style="width:140px"><b>PTD BERTH</b></div>
+      <div class="p-col">Planned time of departure of the vessel from berth. This is the confirmation from the vessel of the requested time of departure done by the vessel operator/agent or captain </div>
+    </div>
+    <div class="p-grid">
+      <div class="p-col-fixed" style="width:140px"><b>ATD BERTH</b></div>
+      <div class="p-col">Actual time of departure from berth </div>
+    </div>
+
+
   </p-card>
 </div>
