DCSA-3 DCSA adjusted instructions pop up and download message, adjusted timestamp description, removed timezones from UI

--- a/ui/src/app/view/instructions/instructions.component.html
+++ b/ui/src/app/view/instructions/instructions.component.html
@@ -1,6 +1,6 @@
 <div class="p-fluid">
 
-  <p-card header="How to use" subheader="Card Subheader" [style]="{width: '100%'}" styleClass="p-card-shadow">
+  <p-card header="Instructions" [style]="{width: '100%'}" styleClass="p-card-shadow">
     <ng-template pTemplate="header">
       <img style="object-fit: cover; object-position: 0 80%; height: 220px" alt="Card"
            src="assets/JIT-Port-Call-Image.jpg">
