--- a/ui/src/app/view/header/header.component.html
+++ b/ui/src/app/view/header/header.component.html
@@ -17,10 +17,7 @@
 
 
 <p-dialog [modal]="true" header="Download Timestamps for {{companyName}}" [(visible)]="displayDownloadRequest" [style]="{width: '50vw'}" [baseZIndex]="10000">
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p>This downloads a csv file, which includes the inserted timestamps for all the vessels that have been reported in this login environment.</p>
   <ng-template pTemplate="footer">
     <p-button icon="pi pi-download" (click)="displayDownloadRequest=false" label="Download" styleClass="p-button-text"></p-button>
     <p-button icon="pi pi-times" (click)="displayDownloadRequest=false" label="Cancel"></p-button>
