--- a/ui/src/app/view/header/header.component.html
+++ b/ui/src/app/view/header/header.component.html
@@ -11,7 +11,7 @@
     <span class="" i18n="@@menu_entry_port_call">Port Call</span>
   </div>
   <div class="p-col-2 header__menuEntry">
-    <span i18n="@@menu_entry_mandator">Company Name: {{ companyName }}</span>
+    <span i18n="@@menu_entry_mandator">Company: {{ companyName }}</span>
   </div>
 </div>
 
