--- a/ui/src/app/view/header/header.component.html
+++ b/ui/src/app/view/header/header.component.html
@@ -3,14 +3,16 @@
     <img class="header__logo" src="assets/DCSA_logo_color_on_dark_background.png">
   </div>
   <div class="p-col-1"></div>
-  <div class="p-col-6 header__menuEntry" >
+  <div class="p-col-3 header__menuEntry" >
     <button pButton (click)="showInstructions()" label="Instructions" class="p-button-text p-button-secondary" icon="pi pi-question" type="button"></button>
     <button pButton (click)="showDownloladRequest()" type="button" label="Download Timestamps" class="p-button-text p-button-secondary" icon="pi pi-download"></button>
   </div>
-  <div class="p-col-2 header__menuEntry">
+  <div class="p-col-1"></div>
+  <div class="p-col-1 header__menuEntry">
     <span class="" i18n="@@menu_entry_port_call">Port Call</span>
   </div>
-  <div class="p-col-2 header__menuEntry">
+  <div class="p-col-1"></div>
+  <div class="p-col-4 header__menuEntry">
     <span i18n="@@menu_entry_mandator">Company: {{ companyName }}</span>
   </div>
 </div>
