--- a/ui/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.html
@@ -91,8 +91,8 @@
       <td style="width: 2%">{{ timestamp.id }}</td>
       <td style="width: 7%">{{ timestamp.timestampType | portCallTimestampTypeToStringPipe: null }}</td>
       <td>{{ timestamp.callSequence + 1 }}</td>
-      <td>{{ timestamp.logOfTimestamp | date: 'MM/dd/yyyy HH:mm' }}</td>
-      <td>{{ timestamp.eventTimestamp | date: 'MM/dd/yyyy HH:mm' }}</td>
+      <td>{{ timestamp.logOfTimestamp | date: 'MM/dd/yyyy HH:mm zzzz' :'UTC' }}</td>
+      <td>{{ timestamp.eventTimestamp | date: 'MM/dd/yyyy HH:mm zzzz': 'UTC' }}</td>
       <td style="width: 7%">
         <div>{{ (timestamp.portPrevious | portIdToPort: ports).unLocode}}</div>
         <div class="rowDetails">{{ (timestamp.portPrevious | portIdToPort: ports).name}}</div>
