--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -9,7 +9,7 @@
         <p-calendar [(ngModel)]="timestamp.logOfTimestamp" hourFormat="24" monthNavigator="true" showButtonBar="true"
                     showIcon="true"
                     showTime="true"
-                    showWeek="true" yearNavigator="true" yearRange="2010:2030"></p-calendar>
+                    showWeek="true" yearNavigator="true" yearRange="2010:2030" [locale]="en"></p-calendar>
       </td>
       <td>
         <p-calendar [(ngModel)]="timestamp.eventTimestamp" hourFormat="24" monthNavigator="true" showButtonBar="true"
