--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -14,7 +14,7 @@
       <td>
         <p-calendar [(ngModel)]="timestamp.eventTimestamp" hourFormat="24" monthNavigator="true" showButtonBar="true"
                     showIcon="true"
-                    showTime="true" showWeek="true" yearNavigator="true" yearRange="2010:2030"></p-calendar>
+                    showTime="true" showWeek="true" yearNavigator="true" yearRange="2010:2030" [locale]="en"></p-calendar>
       </td>
       <td style="width: 7%">
         <p-dropdown [(ngModel)]="timestamp.portPrevious" [filter]="true" [options]="portOptions"
