--- a/ui/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.html
@@ -18,18 +18,22 @@
   <ng-template pTemplate="header">
     <tr>
       <th style="width: 7%" pSortableColumn="timestampType"
-          pTooltip="An estimated, requested, planned or actual timestamp of an event"
+          pTooltip="An estimated, requested, planned or actual timestamp of a process event"
           tooltipPosition="top" tooltipStyleClass="ToolTipClass">Timestamp
         <p-sortIcon field="timestampType"></p-sortIcon>
       </th>
-      <th style="width: 7%">Sequence</th>
-      <th pSortableColumn="logOfTimestamp" pTooltip="When is the timestamp communicated (local time for user)"
+      <th style="width: 7%" pSortableColumn="sequence"
+          pTooltip="How often the planning of a process was changed. This will change automatically"
+          tooltipPosition="top"
+          tooltipStyleClass="ToolTipClass">Sequence
+      </th>
+      <th pSortableColumn="logOfTimestamp" pTooltip="When was the event communicated (local time for port)"
           tooltipPosition="top"
           tooltipStyleClass="ToolTipClass">Log of Timestamp
         <p-sortIcon field="logOfTimestamp"></p-sortIcon>
       </th>
       <th pSortableColumn="eventTimestamp"
-          pTooltip="What is the estimated, requested, planned or actual timestamp of the event. (local time for user)"
+          pTooltip="What is the estimated, requested, planned or actual timestamp of the event. (local time for port)"
           tooltipPosition="top"
           tooltipStyleClass="ToolTipClass">Event. Timestamp
         <p-sortIcon field="eventTimestamp"></p-sortIcon>
@@ -39,7 +43,7 @@
           tooltipStyleClass="ToolTipClass">Previous Port
         <p-sortIcon field="portPrevious"></p-sortIcon>
       </th>
-      <th style="width: 7%" pSortableColumn="portOfCall" pTooltip="What is the approaching port of call?}"
+      <th style="width: 7%" pSortableColumn="portOfCall" pTooltip="What is the approaching port of call? For the agent: this is your own port"
           tooltipPosition="top"
           tooltipStyleClass="ToolTipClass">Port of Call
         <p-sortIcon field="portOfCall"></p-sortIcon>
@@ -54,13 +58,13 @@
           tooltipStyleClass="ToolTipClass">Direction
         <p-sortIcon field="direction"></p-sortIcon>
       </th>
-      <th pSortableColumn="terminal" style="width: 14%" pTooltip="What is the name or SMDG code of the terminal?"
+      <th pSortableColumn="terminal" style="width: 14%" pTooltip="What is the name and/or SMDG code of the terminal?"
           tooltipPosition="top"
           tooltipStyleClass="ToolTipClass">Terminal Id
         <p-sortIcon field="terminal"></p-sortIcon>
       </th>
       <th style="width: 7%" pSortableColumn="locationId"
-          pTooltip="What is the location of the timestamp, e.g. where is the vessel at sea (long/lat) or where at berth is the arrival"
+          pTooltip="If available: where will the vessel berth (bollard number or name)"
           tooltipPosition="top"
           tooltipStyleClass="ToolTipClass">Berth Id
         <p-sortIcon field="locationId"></p-sortIcon>
@@ -113,8 +117,9 @@
       </td>
       <td style="width: 7%">{{ timestamp.locationId }}</td>
       <td style="width: 3%">
-        <p-button *ngIf="timestamp.delayCode || timestamp.changeComment" (onClick)="showComment(timestamp)" icon="pi pi-comment"
-                 ></p-button>
+        <p-button *ngIf="timestamp.delayCode || timestamp.changeComment" (onClick)="showComment(timestamp)"
+                  icon="pi pi-comment"
+        ></p-button>
       </td>
       <td style="width: 5%">
 
