--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -14,7 +14,8 @@
       <td>
         <p-calendar [(ngModel)]="timestamp.eventTimestamp" hourFormat="24" monthNavigator="true" showButtonBar="true"
                     showIcon="true"
-                    showTime="true" showWeek="true" yearNavigator="true" yearRange="2010:2030" [locale]="en"></p-calendar>
+                    [locale]="en" showTime="true" showWeek="true" yearNavigator="true"
+                    yearRange="2010:2030"></p-calendar>
       </td>
       <td style="width: 7%">
         <p-dropdown [(ngModel)]="timestamp.portPrevious" [filter]="true" [options]="portOptions"
@@ -28,16 +29,23 @@
         </p-dropdown>
       </td>
       <td style="width: 7%">
-        <p-dropdown (onChange)="selectPortOfCall(timestamp.portOfCall.id)" [(ngModel)]="timestamp.portOfCall"
-                    [filter]="true" [options]="portOptions"
-                    filterBy="label,value.name">
-          <ng-template let-port pTemplate="item">
-            <div *ngIf="port.value">
-              <div>{{port.value.unLocode}}</div>
-              <div class="portListName">{{port.value.name}}</div>
-            </div>
-          </ng-template>
-        </p-dropdown>
+        <div *ngIf="portOfCall; then portOfCallIdFilter else portOfCallSelect"></div>
+        <ng-template #portOfCallIdFilter>
+          <div>{{portOfCall.unLocode}}</div>
+          <div class="portListName">{{portOfCall.name}}</div>
+        </ng-template>
+        <ng-template #portOfCallSelect>
+          <p-dropdown (onChange)="updateTerminalOptions(timestamp.portOfCall.id)" [(ngModel)]="timestamp.portOfCall"
+                      [filter]="true" [options]="portOptions"
+                      filterBy="label,value.name">
+            <ng-template let-port pTemplate="item">
+              <div *ngIf="port.value">
+                <div>{{port.value.unLocode}}</div>
+                <div class="portListName">{{port.value.name}}</div>
+              </div>
+            </ng-template>
+          </p-dropdown>
+        </ng-template>
       </td>
       <td style="width: 7%">
         <p-dropdown [(ngModel)]="timestamp.portNext" [filter]="true" [options]="portOptions"
@@ -54,18 +62,20 @@
         <p-dropdown [(ngModel)]="timestamp.direction" [options]="directions"></p-dropdown>
       </td>
       <td style="width: 14%">
-        <p-dropdown [(ngModel)]="timestamp.terminal" [disabled]="timestamp.portOfCall === null"
-                    [options]="terminalOptions" [filter]="true" filterBy="label,value.terminalName">
-          <ng-template let-terminal pTemplate="item">
-            <div *ngIf="terminal.value">
-              <div>{{terminal.value.smdgCode}}</div>
-              <div class="terminalListDetails">{{terminal.value.terminalName}}</div>
-              <div class="terminalListDetails">{{terminal.value.terminalOperator}}</div>
-            </div>
-          </ng-template>
-        </p-dropdown>
+          <p-dropdown [(ngModel)]="timestamp.terminal" [disabled]="timestamp.portOfCall === null"
+                      [filter]="true" [options]="terminalOptions" filterBy="label,value.terminalName">
+            <ng-template let-terminal pTemplate="item">
+              <div *ngIf="terminal.value">
+                <div>{{terminal.value.smdgCode}}</div>
+                <div class="terminalListDetails">{{terminal.value.terminalName}}</div>
+                <div class="terminalListDetails">{{terminal.value.terminalOperator}}</div>
+              </div>
+            </ng-template>
+          </p-dropdown>
       </td>
-      <td style="width: 7%"><label><input style="width: 100%" type="text" pInputText [(ngModel)]="timestamp.locationId"/></label></td>
+      <td style="width: 7%">
+        <label><input [(ngModel)]="timestamp.locationId" pInputText style="width: 100%" type="text"/></label>
+      </td>
       <td style="width: 3%">
         <p-button (onClick)="addComment(timestamp)" icon="pi pi-comment"
                   pTooltip="Add your comment and a delay reason to timestamp" tooltipPosition="top"
